# qt-growth-calc

./: .gitignore  CMakeLists.txt  README.md  growthcalculator.cpp  growthcalculator.h  main_qml.cpp  resources.qrc
.github/workflows/: ci.yml  release.yml
logs/: .gitkeep
qml/: main.qml
